--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<head>
+		<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2017)</title>
+</head>
+
 <h1> Hello world!!!!</h1>
