--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <head>
 		<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2017)</title>
 </head>
-
+<body>
+	<nav id="nav">
+	 <ul class="container">
+	    <li><a href="#home">Swesos</a></li>
+            <li><a href="#organization">Organizers</a></li>
+            <!--<li><a href=""></a></li>-->
+	    <li><a href="#proceedings">Proceedings</a></li>
+	    <li><a href="#agenda">Agenda</a></li>
+	    <li><a href="#contact">Contact</a></li>
+	  </ul>
+	</nav>
 <h1> Hello world!!!!</h1>
+</body>
