--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		</noscript>
 </head>
 <body>
+	<centre><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></centre>
+	<centre><h1> co-located with the 11th European Conference on Software Architecture</h1></centre>
+	<centre><h1> 11-15 September, 2017, Canterbury, UK</h1></centre>
 	<nav id="nav">
 	 <ul class="container">
 	    <li><a href="#home">Swesos</a></li>
@@ -24,5 +27,5 @@
 	    <li><a href="#contact">Contact</a></li>
 	  </ul>
 	</nav>
-<h1> Hello world!!!!</h1>
+
 </body>
