--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<centre><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></centre>
-	<centre><h1> co-located with the 11th European Conference on Software Architecture</h1></centre>
+	<centre><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/">11th European Conference on Software Architecture</a></h1></centre>
 	<centre><h1> 11-15 September, 2017, Canterbury, UK</h1></centre>
 	<nav id="nav">
 	 <ul class="container">
