--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		</noscript>
 </head>
 <body>
-	<centre><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></centre>
-	<centre><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></centre>
-	<centre><h1> 11-15 September, 2017, Canterbury, UK</h1></centre>
+	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
+	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
+	<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
 	<nav id="nav">
 	 <ul class="container">
 	    <li><a href="#home">Swesos</a></li>
