--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 		</noscript>
 </head>
 <body>
-	<font color="blue">
+	<font color="red">
 	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
 	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
 	<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
 	</font>
+	<h1>Let's start!!!</h1>
 	<nav id="nav">
 	 <ul class="container">
 	    <li><a href="#home">Swesos</a></li>
