--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		</noscript>
 </head>
 <body>
-	<font color="red" face="comic sans">
+	<font color="red"><font style="comic sans">
 	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
 	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
 	<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
-	</font>
+		</font></font>
 	<h1>Let's start now!!!</h1>
 	<nav id="nav">
 	 <ul class="container">
