--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 </head>
-<body>
-	<font color="red">
-	<p style="font-family:comic">
+<body style="font-style:comic">
+	<font size="3" color="red" face="comic">
 	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
 	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
 	<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
-		</p>
 	</font>
 	<h1>Let's start now!!!</h1>
 	<nav id="nav">
