--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</p>
 	
 	<h1>CSS font-family</h1>
-<p class="serif">This is a paragraph, shown in the Times New Roman font.</p>
+<p class="comic">This should be comic!!!!!</p>
 <p class="sansserif">This is a paragraph, shown in the Arial font.</p>
 	
 	<h1>Let's start now!!!</h1>
