--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
+<!DOCTYPE html>
+<html>
 <head>
-		<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2017)</title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<style>
+div.container {
+    width: 80%;
+    border: 1px solid gray;
+}
+
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 10;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
+</style>
+	<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2017)</title>
+<!--	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
@@ -12,6 +51,7 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
+-->
 </head>
 <body style="font-style:comic">
 	<font size="3" color="blue" face="comic">
