--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ article {
 -->
 </head>
 <body style="font-style:comic">
+	
+	<div class="container">
+
+<header>
+   <h1>City Gallery</h1>
+</header>
+	
 	<font size="3" color="blue" face="comic">
 	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
 	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
