--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 div.container {
-    width: 80%;
-    border: 1px solid gray;
+    width: 100%;
+    border: 1px solid blue;
 }
 
 header, footer {
@@ -58,15 +58,14 @@ article {
 	<div class="container">
 
 <header>
-   <h1>City Gallery</h1>
-</header>
+   
 	
 	<font size="3" color="blue" face="comic">
 	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
 	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
 	<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
 	</font>
-	
+</header>	
 	
 	<p style="font-family:'Comic Sans'">
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
