--- a/index.html
+++ b/index.html
@@ -54,19 +54,32 @@ article {
 -->
 </head>
 <body style="font-style:comic">
-	
 	<div class="container">
-
-<header>
-   
+	<header>
+		<font size="3" color="blue" face="comic">
+		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
+		<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
+		<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
+		</font>
+	</header>	
 	
-	<font size="3" color="blue" face="comic">
-	<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
-	<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
-	<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
-	</font>
-</header>	
-	
+<nav>
+  <ul>
+	  <li><a href="#home">Home</a></li>
+	  <li><a href="#">Topics</a></li>
+    	  <li><a href="#">Important Dates</a></li>
+          <li><a href="#">Submission Guidelines</a></li>
+	  <li><a href="#">Publication</a></li>
+	  <li><a href="#organizers">Workshop Organizers</a></li>
+	  <li><a href="#">Program Committee</a></li>
+	  <li><a href="#">Submission</a></li>
+	  <li><a href="#">Registration</a></li>
+	  <li><a href="#">Venue</a></li>
+  </ul>
+</nav>
+		
+<article>
+	<h1 id="home">Home</h1>
 	<p style="font-family:'Comic Sans'">
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
@@ -77,7 +90,16 @@ article {
 	<p>
 	The workshop aims to bring together software engineers and computer scientists, researchers, practitioners and educators to discuss and exchanges results, case studies, experiences,  novel approaches and visionary ideas concerning software architectures for context-aware, autonomous, and smart solutions.
 	</p>
-	
+</article>
+		
+<article>
+	<h1 id="organizers">Workshop Organizers</h1>
+	<p style="font-family:'Comic Sans'">
+		Claudia Raibulet
+		MariaGrazia Fugini
+		Patrizio Pelliccione
+		Khalil Drira
+</article>
 	<h1>CSS font-family</h1>
 <p class="comic">This should be comic!!!!!</p>
 <p class="sansserif">This is a paragraph, shown in the Arial font.</p>
