--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 div.container {
     width: 100%;
-    border: 1px solid blue;
+    border: 1px solid white;
 }
 
 header, footer {
@@ -100,20 +100,6 @@ article {
 		Patrizio Pelliccione
 		Khalil Drira
 </article>
-	<h1>CSS font-family</h1>
-<p class="comic">This should be comic!!!!!</p>
-<p class="sansserif">This is a paragraph, shown in the Arial font.</p>
 	
-	<h1>Let's start now!!!</h1>
-	<nav id="nav">
-	 <ul class="container">
-	    <li><a href="#home">Swesos</a></li>
-            <li><a href="#organization">Organizers</a></li>
-            <!--<li><a href=""></a></li>-->
-	    <li><a href="#proceedings">Proceedings</a></li>
-	    <li><a href="#agenda">Agenda</a></li>
-	    <li><a href="#contact">Contact</a></li>
-	  </ul>
-	</nav>
-
-</body>
+	</div>
+	</body>
