--- a/index.html
+++ b/index.html
@@ -39,21 +39,9 @@ article {
 }
 </style>
 	<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2017)</title>
-<!--	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
-		<script src="js/jquery.min.js"></script>
-		<script src="js/config.js"></script>
-		<script src="js/skel.min.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
--->
 </head>
-<body style="font-style:comic">
+
+	<body style="font-style:comic">
 	<div class="container">
 	<header>
 		<font size="3" color="blue" face="comic">
@@ -96,10 +84,11 @@ article {
 <article>
 	<h1 id="organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
-		Claudia Raibulet
-		MariaGrazia Fugini
-		Patrizio Pelliccione
-		Khalil Drira
+	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy</p>
+	<p>	MariaGrazia Fugini, Politecnico di Milano, Italy</p>
+	<p> 	Khalil Drira, Université de Toulouse, France</p>
+	<p> 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden</p>
+		
 </article>
 	
 	</div>
