--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@ article {
 <nav>
   <ul>
 	  <li><a href="#home">Home</a></li>
-	  <li><a href="#">Topics</a></li>
-    	  <li><a href="#">Important Dates</a></li>
-          <li><a href="#">Submission Guidelines</a></li>
-	  <li><a href="#">Publication</a></li>
+	  <li><a href="#topics">Topics</a></li>
+    	  <li><a href="#dates">Important Dates</a></li>
+          <li><a href="#submission">Submission Guidelines</a></li>
+	  <li><a href="#publication">Publication</a></li>
 	  <li><a href="#organizers">Workshop Organizers</a></li>
-	  <li><a href="#">Program Committee</a></li>
-	  <li><a href="#">Submission</a></li>
-	  <li><a href="#">Registration</a></li>
-	  <li><a href="#">Venue</a></li>
+	  <li><a href="#programcommittee">Program Committee</a></li>
+	  <li><a href="#submissionsite">Submission Site</a></li>
+	  <li><a href="#registration">Registration</a></li>
+	  <li><a href="#venue">Venue</a></li>
   </ul>
 </nav>
 		
@@ -80,16 +80,116 @@ article {
 	The workshop aims to bring together software engineers and computer scientists, researchers, practitioners and educators to discuss and exchanges results, case studies, experiences,  novel approaches and visionary ideas concerning software architectures for context-aware, autonomous, and smart solutions.
 	</p>
 </article>
+	
+<article> <h1 id="topics">Topics</h1>
+<p> The CASA 2017 workshop is interested in all the topics concerning the
+architectural aspects in Context-aware, Autonomous, and Smart
+(CASA) solutions. Please find below several examples of possible
+topics:
+<ul>
+<li> software architectures for CASA solutions: surveys, issues,
+challenges, comparisons;
+<li> architecture frameworks for CASA solutions;
+<li> architecture description languages for CASA solutions;
+<li> standards for software architectures in CASA solutions;
+<li> model-driven engineering for CASA solutions;
+<li> software architecture and Big Data for CASA solutions;
+<li> software architecture and Internet-of-Things for CASA
+solutions;
+<li> cloud-computing and network infrastructures for CASA
+solutions;
+<li> machine learning and CASA solutions;
+<li> autonomous and self-adaptive aspects of CASA solutions;
+<li> social and technological issues in CASA solutions;
+<li> evolution and maintenance issues in CASA solutions;
+<li> privacy, safety, security, cyber-physical issues in CASA
+solutions;
+<li> testing and evaluation of smartness in CASA solutions;
+<li> software architectures in CASA case studies and innovative
+applications;
+<li> teaching software architectures for CASA solutions.
+	</ul>		
+</article>
+		
+		<article>
+			<h1 id="dates"> Important Dates</h1>
+		  	<p> Paper submission: June, 23rd, 2017
+		  	<p> Paper notification: July, 17th, 2017
+			<p> Camera ready: July, 24th, 2017	    
+		</article>
+		
+		<article>
+			<h1 id="submission">Submission Guidelines</h1>
+		  	<p> The workshop invites two types of submissions:
+				<ul>
+					<li> full research and experience papers, presenting novel
+contributions concerning the architectural aspects of contextaware,
+autonomous, and smart solutions;
+<li> short and position papers, presenting promising preliminary
+results from work-in-progress or research challenges in software
+architectures for context-aware, autonomous, and smart solutions.
+			</ul>
+<p> All the papers must be written in English and respect the ECSA
+2017 guidelines and length rules.
+<p> Submitted papers will be reviewed by at least 3 members of
+Program/Organizing Committee (or their sub-reviewers) and
+selection of accepted papers will be based on relevance, quality
+and originality of the submitted papers. For each accepted paper,
+at least one of the (co)author(s) is expected to be present at the
+workshop and to present the paper.	
+	<p> All the submitted papers should follow the ACM ICPS proceedings templates 
+		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
+		</article>
+		
+		<article>
+			<h1 id="publication">Publication </h1>
+			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
+			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
+topics of the workshop in a journal. More information will be soon provided.
+
+		</article>
+		
 		
 <article>
 	<h1 id="organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
 	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy</p>
+	<p> Email: raibulet at disco.unimib.it
 	<p>	MariaGrazia Fugini, Politecnico di Milano, Italy</p>
+	<p> Email: fugini at polimi.it
 	<p> 	Khalil Drira, Université de Toulouse, France</p>
+	<p> Email: khalil at laas.fr
 	<p> 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden</p>
+	<p> Email: patrizio.pelliccione at cse.gu.se
 		
 </article>
 	
+		<article>
+			<h1 id="programcommittee">Program Committee </h1>
+			<p> Mahdi Ben Alaya, Sensinov, France
+			<p> Ovidiu Constantin, Oracle, Italy
+			<p> Liliana Dobrica, POLITEHNICA Universiy, Romania
+			<p> Khalil Drira, University of Toulouse, France
+			<p> Ernesto Exposito, University of Pau, France
+			<p> Paolo Falcarin, University of East London, UK
+			<p> Maria Grazia Fugini, Politecnico di Milano, Italy
+			<p> Stefano Mussino, ReDiX Informatica s.r.l., Italy
+			<p> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
+			<p> Claudia Raibulet, University of Milano-Bicocca, Italy
+			<p> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
+			<p> TO BE EXTENDED
+		</article>
+		
+		
+		<article>
+			<h1 id="#registration">Registration</h1>
+			<p> Coming soon!
+		</article>
+		
+		<article>
+			<h1 id="#venue">Venue</h1>
+			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
+		</article>
+		
 	</div>
 	</body>
