--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ article {
 		
 <article>
 	<h1 id="home">Home</h1>
-	<p style="font-family:'Comic Sans'">
+	<p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
 	<p></p>
@@ -153,14 +153,10 @@ topics of the workshop in a journal. More information will be soon provided.
 <article>
 	<h1 id="organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
-	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy</p>
-	<p> Email: raibulet at disco.unimib.it
-	<p>	MariaGrazia Fugini, Politecnico di Milano, Italy</p>
-	<p> Email: fugini at polimi.it
-	<p> 	Khalil Drira, Université de Toulouse, France</p>
-	<p> Email: khalil at laas.fr
-	<p> 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden</p>
-	<p> Email: patrizio.pelliccione at cse.gu.se
+	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it</p>
+	<p>	MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it</p>
+	<p> 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr</p>
+	<p> 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se</p>
 		
 </article>
 	
