--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ article {
 </nav>
 		
 <article>
-	<h1 id="home">Home</h1>
+	<h1 id="#home">Home</h1>
 	<p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
@@ -81,7 +81,7 @@ article {
 	</p>
 </article>
 	
-<article> <h1 id="topics">Topics</h1>
+<article> <h1 id="#topics">Topics</h1>
 <p> The CASA 2017 workshop is interested in all the topics concerning the
 architectural aspects in Context-aware, Autonomous, and Smart
 (CASA) solutions. Please find below several examples of possible
@@ -112,14 +112,14 @@ applications;
 </article>
 		
 		<article>
-			<h1 id="dates"> Important Dates</h1>
+			<h1 id="#dates"> Important Dates</h1>
 		  	<p> Paper submission: June, 23rd, 2017
 		  	<p> Paper notification: July, 17th, 2017
 			<p> Camera ready: July, 24th, 2017	    
 		</article>
 		
 		<article>
-			<h1 id="submission">Submission Guidelines</h1>
+			<h1 id="#submission">Submission Guidelines</h1>
 		  	<p> The workshop invites two types of submissions:
 				<ul>
 					<li> full research and experience papers, presenting novel
@@ -142,7 +142,7 @@ workshop and to present the paper.
 		</article>
 		
 		<article>
-			<h1 id="publication">Publication </h1>
+			<h1 id="#publication">Publication </h1>
 			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
 			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
 topics of the workshop in a journal. More information will be soon provided.
@@ -151,7 +151,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		
 		
 <article>
-	<h1 id="organizers">Workshop Organizers</h1>
+	<h1 id="#organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
 	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it</p>
 	<p>	MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it</p>
@@ -161,7 +161,7 @@ topics of the workshop in a journal. More information will be soon provided.
 </article>
 	
 		<article>
-			<h1 id="programcommittee">Program Committee </h1>
+			<h1 id="#programcommittee">Program Committee </h1>
 			<p> Mahdi Ben Alaya, Sensinov, France
 			<p> Ovidiu Constantin, Oracle, Italy
 			<p> Liliana Dobrica, POLITEHNICA Universiy, Romania
