--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ article {
   </ul>
 </nav>
 		
-<article>
+<article id="home">
 	<h1 id="#home">Home</h1>
 	<p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
@@ -81,7 +81,7 @@ article {
 	</p>
 </article>
 	
-<article> <h1 id="#topics">Topics</h1>
+<article id="topics"> <h1 id="#topics">Topics</h1>
 <p> The CASA 2017 workshop is interested in all the topics concerning the
 architectural aspects in Context-aware, Autonomous, and Smart
 (CASA) solutions. Please find below several examples of possible
@@ -111,7 +111,7 @@ applications;
 	</ul>		
 </article>
 		
-		<article>
+		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
 		  	<p> Paper submission: June, 23rd, 2017
 		  	<p> Paper notification: July, 17th, 2017
