--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ applications;
 			<p> Camera ready: July, 24th, 2017	    
 		</article>
 		
-		<article>
+		<article id="submission">
 			<h1 id="#submission">Submission Guidelines</h1>
 		  	<p> The workshop invites two types of submissions:
 				<ul>
@@ -141,7 +141,7 @@ workshop and to present the paper.
 		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
 		</article>
 		
-		<article>
+		<article id="publication">
 			<h1 id="#publication">Publication </h1>
 			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
 			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
@@ -150,7 +150,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		</article>
 		
 		
-<article>
+<article id="organizers">
 	<h1 id="#organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
 	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it</p>
@@ -160,7 +160,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		
 </article>
 	
-		<article>
+		<article id="programcommittee">
 			<h1 id="#programcommittee">Program Committee </h1>
 			<p> Mahdi Ben Alaya, Sensinov, France
 			<p> Ovidiu Constantin, Oracle, Italy
@@ -177,12 +177,12 @@ topics of the workshop in a journal. More information will be soon provided.
 		</article>
 		
 		
-		<article>
+		<article id="registration">
 			<h1 id="#registration">Registration</h1>
 			<p> Coming soon!
 		</article>
 		
-		<article>
+		<article id="venue">
 			<h1 id="#venue">Venue</h1>
 			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
 		</article>
