--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ topics of the workshop in a journal. More information will be soon provided.
 			<p> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
 			<p> Claudia Raibulet, University of Milano-Bicocca, Italy
 			<p> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
-			<p> TO BE EXTENDED
+			<p> TO BE EXTENDED!
 		</article>
 		
 		
