--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@ topics of the workshop in a journal. More information will be soon provided.
 			<p> TO BE EXTENDED!
 		</article>
 		
+		<article id="submissionsite">
+			<h1 id="#submissionsite">Submission Site</h1>
+			<p> Coming soon!
+		</article>
+		
 		
 		<article id="registration">
 			<h1 id="#registration">Registration</h1>
