--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ article {
 	<div class="container">
 	<header>
 		<font size="3" color="blue" face="comic">
+		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop<br>
+		 co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a><br>
+		 11-15 September, 2017, Canterbury, UK<br>
+		 CASA@ECSA2017</h1></center>
+		</font>
+		
+		
+		
+		<font size="3" color="blue" face="comic">
 		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
 		<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
 		<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
