--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ applications;
 		
 		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
-		  	<p> Paper submission: June, 23rd, 2017
-		  	<p> Paper notification: July, 17th, 2017
-			<p> Camera ready: July, 24th, 2017	    
+		  	<p> Paper submission: June, 23rd, 2017<br>
+		  	Paper notification: July, 17th, 2017<br>
+			Camera ready: July, 24th, 2017	  <br>
 		</article>
 		
 		<article id="submission">
@@ -162,27 +162,27 @@ topics of the workshop in a journal. More information will be soon provided.
 <article id="organizers">
 	<h1 id="#organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
-	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it</p>
-	<p>	MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it</p>
-	<p> 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr</p>
-	<p> 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se</p>
+	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it<br>
+		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
+	 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr<br>
+	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
 		
 </article>
 	
 		<article id="programcommittee">
 			<h1 id="#programcommittee">Program Committee </h1>
 			<p> Mahdi Ben Alaya, Sensinov, France
-			<p> Ovidiu Constantin, Oracle, Italy
-			<p> Liliana Dobrica, POLITEHNICA Universiy, Romania
-			<p> Khalil Drira, University of Toulouse, France
-			<p> Ernesto Exposito, University of Pau, France
-			<p> Paolo Falcarin, University of East London, UK
-			<p> Maria Grazia Fugini, Politecnico di Milano, Italy
-			<p> Stefano Mussino, ReDiX Informatica s.r.l., Italy
-			<p> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
-			<p> Claudia Raibulet, University of Milano-Bicocca, Italy
-			<p> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
-			<p> TO BE EXTENDED!
+			<br> Ovidiu Constantin, Oracle, Italy
+			<br> Liliana Dobrica, POLITEHNICA Universiy, Romania
+			<br> Khalil Drira, University of Toulouse, France
+			<br> Ernesto Exposito, University of Pau, France
+			<br> Paolo Falcarin, University of East London, UK
+			<br> Maria Grazia Fugini, Politecnico di Milano, Italy
+			<br> Stefano Mussino, ReDiX Informatica s.r.l., Italy
+			<br> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
+			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
+			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
+			<br> TO BE EXTENDED!
 		</article>
 		
 		<article id="submissionsite">
