--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@ article {
 			<center><h1>CASA@ECSA2017</h1></center>
 		</font><-->
 	</header>	
+	<div class='row'>
+        	<div class='btn'>Hello</div>
+        	<div class='btn'>World</div>
+    	</div>
+		<div class='clear'>XXXXXXXX</div>
 	
 <nav>
   <ul>
