--- a/index.html
+++ b/index.html
@@ -60,12 +60,23 @@ article {
 			<center><h1>CASA@ECSA2017</h1></center>
 		</font><-->
 	</header>	
-	<div class='row'>
-        	<div class='btn'>Hello</div>
-        	<div class='btn'>World</div>
-    	</div>
-		<div class='clear'>XXXXXXXX</div>
+
+<table style="width:100%">
+  <tr>
+    <th style="width:20%"><img src="CASA@ECSA-logo.bmp" alt="CASA@ECSA2017" style="width:304px;height:228px;"></th>
+    <th style="width:80%">
+<font size="3" color="blue" face="comic">
+		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop<br>
+		 co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a><br>
+		 11-15 September, 2017, Canterbury, UK<br>
+		 CASA@ECSA2017</h1></center>
+		</font>
+	    
+	  </th>
+  </tr>
+</table> 
 	
+		
 <nav>
   <ul>
 	  <li><a href="#home">Home</a></li>
