--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ article {
 	<body style="font-style:comic">
 	<div class="container">
 	<header>
-		<font size="3" color="blue" face="comic">
+		<!--<font size="3" color="blue" face="comic">
 		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop<br>
 		 co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a><br>
 		 11-15 September, 2017, Canterbury, UK<br>
@@ -63,8 +63,8 @@ article {
 
 <table style="width:100%">
   <tr>
-    <th style="width:20%"><img src="CASA@ECSA-logo.bmp" alt="CASA@ECSA2017" style="width:304px;height:228px;"></th>
-    <th style="width:80%">
+    <th style="width:15%"><img src="CASA@ECSA-logo.bmp" alt="CASA@ECSA2017" style="width:304px;height:228px;"></th>
+    <th style="width:85%">
 <font size="3" color="blue" face="comic">
 		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop<br>
 		 co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a><br>
