--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ article {
 	<p>
 	The workshop aims to bring together software engineers and computer scientists, researchers, practitioners and educators to discuss and exchanges results, case studies, experiences,  novel approaches and visionary ideas concerning software architectures for context-aware, autonomous, and smart solutions.
 	</p>
+	
 </article>
 	
 <article id="topics"> <h1 id="#topics">Topics</h1>
@@ -134,6 +135,7 @@ solutions;
 applications;
 <li> teaching software architectures for CASA solutions.
 	</ul>		
+	<br><a href="#home">Go to top</a>
 </article>
 		
 		<article id="dates">
@@ -141,6 +143,7 @@ applications;
 		  	<p> Paper submission: June, 23rd, 2017<br>
 		  	Paper notification: July, 17th, 2017<br>
 			Camera ready: July, 24th, 2017	  <br>
+				<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submission">
@@ -171,7 +174,7 @@ workshop and to present the paper.
 			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
 			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
 topics of the workshop in a journal. More information will be soon provided.
-
+<br><a href="#home">Go to top</a>
 		</article>
 		
 		
@@ -182,6 +185,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
 	 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
+		<br><a href="#home">Go to top</a>
 		
 </article>
 	
@@ -199,23 +203,26 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br> TO BE EXTENDED!
+				<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submissionsite">
 			<h1 id="#submissionsite">Submission Site</h1>
 			<p> Coming soon!
+				<br><a href="#home">Go to top</a>
 		</article>
 		
 		
 		<article id="registration">
 			<h1 id="#registration">Registration</h1>
 			<p> Coming soon!
+				<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="venue">
 			<h1 id="#venue">Venue</h1>
 			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
-			<a href="#home">Go to top</a>
+			<br><a href="#home">Go to top</a>
 		</article>
 		
 	</div>
