--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ solutions;
 applications;
 <li> teaching software architectures for CASA solutions.
 	</ul>		
-	<br><a href="#home">Go to top</a>
+	<p><br><a href="#home">Go to top</a>
 </article>
 		
 		<article id="dates">
@@ -143,7 +143,7 @@ applications;
 		  	<p> Paper submission: June, 23rd, 2017<br>
 		  	Paper notification: July, 17th, 2017<br>
 			Camera ready: July, 24th, 2017	  <br>
-				<br><a href="#home">Go to top</a>
+	<p>			<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submission">
@@ -167,6 +167,7 @@ at least one of the (co)author(s) is expected to be present at the
 workshop and to present the paper.	
 	<p> All the submitted papers should follow the ACM ICPS proceedings templates 
 		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
+		<p>			<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="publication">
@@ -174,7 +175,7 @@ workshop and to present the paper.
 			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
 			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
 topics of the workshop in a journal. More information will be soon provided.
-<br><a href="#home">Go to top</a>
+<p><br><a href="#home">Go to top</a>
 		</article>
 		
 		
@@ -185,7 +186,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
 	 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
-		<br><a href="#home">Go to top</a>
+<p>		<br><a href="#home">Go to top</a>
 		
 </article>
 	
@@ -203,26 +204,26 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br> TO BE EXTENDED!
-				<br><a href="#home">Go to top</a>
+<p>				<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submissionsite">
 			<h1 id="#submissionsite">Submission Site</h1>
 			<p> Coming soon!
-				<br><a href="#home">Go to top</a>
+<p>				<br><a href="#home">Go to top</a>
 		</article>
 		
 		
 		<article id="registration">
 			<h1 id="#registration">Registration</h1>
 			<p> Coming soon!
-				<br><a href="#home">Go to top</a>
+<p>				<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="venue">
 			<h1 id="#venue">Venue</h1>
 			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
-			<br><a href="#home">Go to top</a>
+<p>			<br><a href="#home">Go to top</a>
 		</article>
 		
 	</div>
