--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ at least one of the (co)author(s) is expected to be present at the
 workshop and to present the paper.	
 	<p> All the submitted papers should follow the ACM ICPS proceedings templates 
 		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
-		<p>			<br><a href="#home">Go to top</a>
+		<p>	<p>		
+			<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="publication">
@@ -204,7 +205,7 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br> TO BE EXTENDED!
-<p>				<br><a href="#home">Go to top</a>
+<p>			<p>	<br><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submissionsite">
