--- a/index.html
+++ b/index.html
@@ -167,8 +167,10 @@ at least one of the (co)author(s) is expected to be present at the
 workshop and to present the paper.	
 	<p> All the submitted papers should follow the ACM ICPS proceedings templates 
 		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
-		<p>	<p>		
-			<br><a href="#home">Go to top</a>
+		
+		<br>
+			<p><p>
+			<a href="#home">Go to top</a>
 		</article>
 		
 		<article id="publication">
@@ -176,7 +178,7 @@ workshop and to present the paper.
 			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
 			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
 topics of the workshop in a journal. More information will be soon provided.
-<p><br><a href="#home">Go to top</a>
+<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		
@@ -187,7 +189,8 @@ topics of the workshop in a journal. More information will be soon provided.
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
 	 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
-<p>		<br><a href="#home">Go to top</a>
+		
+<p>		<br><p><a href="#home">Go to top</a>
 		
 </article>
 	
@@ -205,26 +208,26 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br> TO BE EXTENDED!
-<p>			<p>	<br><a href="#home">Go to top</a>
+<p>			<p>	<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submissionsite">
 			<h1 id="#submissionsite">Submission Site</h1>
 			<p> Coming soon!
-<p>				<br><a href="#home">Go to top</a>
+<p>				<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		
 		<article id="registration">
 			<h1 id="#registration">Registration</h1>
 			<p> Coming soon!
-<p>				<br><a href="#home">Go to top</a>
+<p>				<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="venue">
 			<h1 id="#venue">Venue</h1>
 			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
-<p>			<br><a href="#home">Go to top</a>
+<p>			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 	</div>
