--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ topics of the workshop in a journal. More information will be soon provided.
 	 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
 		
-<p>		<br><p><a href="#home">Go to top</a>
+		<br><p><a href="#home">Go to top</a>
 		
 </article>
 	
@@ -208,20 +208,20 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br> TO BE EXTENDED!
-<p>			<p>	<br><p><a href="#home">Go to top</a>
+			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submissionsite">
 			<h1 id="#submissionsite">Submission Site</h1>
 			<p> Coming soon!
-<p>				<br><p><a href="#home">Go to top</a>
+			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		
 		<article id="registration">
 			<h1 id="#registration">Registration</h1>
 			<p> Coming soon!
-<p>				<br><p><a href="#home">Go to top</a>
+			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="venue">
