--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ topics of the workshop in a journal. More information will be soon provided.
 	<p style="font-family:'Comic Sans'">
 	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it<br>
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
-	 	Khalil Drira, Université de Toulouse, France --- Email: khalil at laas.fr<br>
+	 	Khalil Drira, LAAS-CNRS, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
 		
 		<br><p><a href="#home">Go to top</a>
