--- a/index.html
+++ b/index.html
@@ -151,22 +151,21 @@ applications;
 		  	<p> The workshop invites two types of submissions:
 				<ul>
 					<li> full research and experience papers, presenting novel
-contributions concerning the architectural aspects of contextaware,
+contributions concerning the architectural aspects of context-aware,
 autonomous, and smart solutions;
 <li> short and position papers, presenting promising preliminary
 results from work-in-progress or research challenges in software
 architectures for context-aware, autonomous, and smart solutions.
 			</ul>
-<p> All the papers must be written in English and respect the ECSA
-2017 guidelines and length rules.
+<p> All the papers must be written in English. All the submitted papers should follow the ACM ICPS proceedings templates 
+		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
 <p> Submitted papers will be reviewed by at least 3 members of
 Program/Organizing Committee (or their sub-reviewers) and
 selection of accepted papers will be based on relevance, quality
 and originality of the submitted papers. For each accepted paper,
 at least one of the (co)author(s) is expected to be present at the
 workshop and to present the paper.	
-	<p> All the submitted papers should follow the ACM ICPS proceedings templates 
-		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
+
 		
 		<br>
 			<p><p>
