--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@ applications;
 			<h1 id="#submission">Submission Guidelines</h1>
 		  	<p> The workshop invites two types of submissions:
 				<ul>
-					<li> full research and experience papers, presenting novel
+					<li> full research and experience papers (max 7 pages), presenting novel
 contributions concerning the architectural aspects of context-aware,
 autonomous, and smart solutions;
-<li> short and position papers, presenting promising preliminary
+<li> short and position papers (max 4 pages), presenting promising preliminary
 results from work-in-progress or research challenges in software
 architectures for context-aware, autonomous, and smart solutions.
 			</ul>
