--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		
 		<article id="submissionsite">
 			<h1 id="#submissionsite">Submission Site</h1>
-			<p> Coming soon!
+			<p> Please follow the link to submit your contribution: <a href="https://easychair.org/conferences/?conf=casaecsa2017"> CASA@ECSA 2017 Submission Site</a>
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
