--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ article {
 <article id="home">
 	<h1 id="#home">Home</h1>
 	<p>
-		News: Submission deadline extended until July, 5th, 2017. 
+		<font color = "red"<b>News: Submission deadline extended until July, 5th, 2017. </b></font>
 	<p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
