--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ applications;
 		
 		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
-		  	<p> Paper submission - EXTENDED: July, 5th, 2017<br> 
+		  	<p> Paper submission EXTENDED: July, 5th, 2017<br> 
 		  	Paper notification: July, 17th, 2017<br>
 			Camera ready: July, 24th, 2017	  <br>
 	<p>			<br><a href="#home">Go to top</a>
